# bmp-reader-test

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: tests.yml
cli/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  bmp_reader.cpp  bmp_reader.h
src/util/: bitmap_file_header.h  bitmap_info_header.h  color.h  field_types.h  invalid_bmp_error.h  io_error.h  ms_constants.h
test/: CMakeLists.txt  drawer_tests.cpp  reader_tests.cpp
test_input_data/: test1.txt
